--- a/imiparerau.html
+++ b/imiparerau.html
@@ -3,7 +3,8 @@
 <head>
     <title> Îmi pare rău!</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+       @import url('https://fonts.cdnfonts.com/css/sans-comic-sans');
+</style>
 
         body {
             font-family: 'Comic Sans MS', sans-serif;
